fixed overflow

--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
-main {
+/* main {
     overflow-x: hidden;
-}
+} */
 
 .about img {
     width: 250px;
